unpackaged/main/default/objects/pse__Assignment_Daily_Note__c/pse__Assignment_Daily_Note__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__AssignmentAndScheduleHelp</customHelpPage>
    <description>Stores daily notes for an assignment, usually entered by an assigned resource and viewed by users with staffing or project management roles.</description>
    <label>Assignment Daily Note</label>
    <nameField>
        <displayFormat>ADN-{0}</displayFormat>
        <label>Assignment Daily Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Daily Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>