unpackaged/main/default/objects/pse__Assignment_Daily_Note__c/fields/pse__Assignment__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment__c</fullName>
    <description>The Assignment to which the Daily Note belongs (master-detail).</description>
    <label>Assignment</label>
    <referenceTo>pse__Assignment__c</referenceTo>
    <relationshipLabel>Assignment Daily Notes</relationshipLabel>
    <relationshipName>Assignment_Daily_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>