unpackaged/main/default/objects/pse__Assignment_Daily_Note__c/fields/pse__LastModifiedByUsername__c.field-meta.xml
<CustomField>
    <fullName>pse__LastModifiedByUsername__c</fullName>
    <formula>LastModifiedBy.FirstName &amp; ' ' &amp; LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastModifiedByUsername</label>
    <type>Text</type>
</CustomField>