unpackaged/main/default/objects/pse__Assignment_Daily_Note__c/fields/pse__Note__c.field-meta.xml
<CustomField>
    <fullName>pse__Note__c</fullName>
    <description>Contents of the Daily Note (max 255 chars).</description>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>