unpackaged/main/default/objects/pse__Assignment_Daily_Note__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <description>Formula hyperlink to Assignment Project associated with Daily Note</description>
    <formula>IF(OR(ISNULL(pse__Assignment__c),(pse__Assignment__c=''),ISNULL(pse__Assignment__r.pse__Project__c),(pse__Assignment__r.pse__Project__c='')),null,HYPERLINK('/'&amp;pse__Assignment__r.pse__Project__c,pse__Assignment__r.pse__Project__r.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>