unpackaged/main/default/objects/pse__Assignment_Daily_Note__c/fields/pse__Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource__c</fullName>
    <description>Formula hyperlink to Assigned Resource associated with Daily Note</description>
    <formula>IF(OR(ISNULL(pse__Assignment__c),(pse__Assignment__c=''),ISNULL(pse__Assignment__r.pse__Resource__c),(pse__Assignment__r.pse__Resource__c='')),null,HYPERLINK('/'&amp;pse__Assignment__r.pse__Resource__c,pse__Assignment__r.pse__Resource__r.FirstName&amp;' '&amp;pse__Assignment__r.pse__Resource__r.LastName))</formula>
    <label>Resource</label>
    <type>Text</type>
</CustomField>